--- a/.github/workflows/upload-index-html.yaml
+++ b/.github/workflows/upload-index-html.yaml
@@ -11,9 +11,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
 
-      - name: Up dontainer
+      - name: Up container
         run: docker compose up -d
 
       - name: Exec aglio
